--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ clip = {git = "https://github.com/openai/CLIP.git"}
 transformers = "^4.41.1"
 torch = "^2.3.0"
 datasets = "^2.19.1"
+httpx = "^0.27.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
