--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.10"
 httpx = "^0.27.0"
 python-dotenv = "^1.0.1"
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standard"], version = "^0.30.0"}
+sqlmodel = "^0.0.18"
+pgvector = "^0.2.5"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
