--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.0"}
 sqlmodel = "^0.0.18"
 pgvector = "^0.2.5"
 psycopg2 = "^2.9.9"
+pillow = "^10.3.0"
 
 
 [build-system]
