--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Sjors Lockhorst <sjors@lockhorst.dev>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.12"
 httpx = "^0.27.0"
 python-dotenv = "^1.0.1"
 fastapi = "^0.111.0"
@@ -18,6 +18,7 @@ pillow = "^10.3.0"
 torch = "^2.3.0"
 transformers = "^4.41.2"
 loguru = "^0.7.2"
+pytest = "^8.2.2"
 
 
 [build-system]
