--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ loguru = "^0.7.2"
 pytest = "^8.2.2"
 scikit-learn = "^1.5.0"
 joblib = "^1.4.2"
+matplotlib = "^3.9.0"
 
 [tool.pylsp-mypy]
 enabled = true
