--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
+    "pixi-viewport": "^5.0.3",
+    "pixi.js": "^8.1.6",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.0"
   }
 }
