--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,12 @@ RUN poetry install --no-root
 # Copy the rest of the application code to the container
 COPY ./backend /app/backend
 
+# Run file which just creates models, downloading them to ./backend/.huggingface for cache
+RUN poetry run python -m etl.embed.models
+
+# Copy HF model files into the app
+COPY ./backend/.huggingface ./backend/.huggingface
+
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
