--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       - database
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - RIJKSMUSEUM_API_KEY=${RIJKSMUSEUM_API_KEY}
     volumes:
       - ./backend:/app/backend
       - /app/backend/__pycache__
