--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ COPY ./backend/pyproject.toml ./backend/poetry.lock* /app/backend/
 # Install project dependencies
 RUN poetry install --no-root
 
-# Copy the rest of the application code to the container
+# Copy the rest of the application code to the container, including the existing start.sh script
 COPY ./backend /app/backend
 
 # Run file which just creates models, downloading them to ./backend/.huggingface for cache
@@ -25,5 +25,8 @@ COPY ./backend/.huggingface ./backend/.huggingface
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
-# Run FastAPI with hot reloading when the container launches
-CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Ensure the start.sh script is executable
+RUN chmod +x /app/backend/start.sh
+
+# Use the start.sh script as the container's entry point
+CMD ["/app/backend/start.sh"]
