--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,13 +9,10 @@ readme = "README.md"
 python = "^3.12"
 httpx = "^0.27.0"
 python-dotenv = "^1.0.1"
-fastapi = "^0.111.0"
-uvicorn = {extras = ["standard"], version = "^0.30.0"}
 sqlmodel = "^0.0.18"
 pgvector = "^0.2.5"
 psycopg2 = "^2.9.9"
 pillow = "^10.3.0"
-torch = "^2.3.0"
 transformers = "^4.41.2"
 loguru = "^0.7.2"
 pytest = "^8.2.2"
@@ -23,6 +20,25 @@ scikit-learn = "^1.5.0"
 joblib = "^1.4.2"
 matplotlib = "^3.9.0"
 pydantic-settings = "^2.4.0"
+torch = {version = "^2.4.1+cpu", source = "pytorch"}
+
+[tool.poetry.group.backend]
+optional = true
+
+[tool.poetry.group.backend.dependencies]
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standard"], version = "^0.30.0"}
+
+[tool.poetry.group.etl]
+optional = true
+
+[tool.poetry.group.etl.dependencies]
+torch = "^2.3.0"
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "supplemental"
 
 [tool.pylsp-mypy]
 enabled = true
