--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["Sjors Lockhorst <sjors@lockhorst.dev>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 httpx = "^0.27.0"
 python-dotenv = "^1.0.1"
 sqlmodel = "^0.0.18"
 pgvector = "^0.2.5"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 pillow = "^10.3.0"
 transformers = "^4.41.2"
 loguru = "^0.7.2"
@@ -20,7 +20,10 @@ scikit-learn = "^1.5.0"
 joblib = "^1.4.2"
 matplotlib = "^3.9.0"
 pydantic-settings = "^2.4.0"
-torch = {version = "^2.4.1+cpu", source = "pytorch"}
+torch = {version = "^2.4.1+cpu", source = "pytorch", optional = true}
+
+[tool.poetry.extras]
+torch = ["torch"]
 
 [tool.poetry.group.backend]
 optional = true
@@ -33,7 +36,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.0"}
 optional = true
 
 [tool.poetry.group.etl.dependencies]
-torch = "^2.3.0"
+runpod = "^1.7.0"
 
 [[tool.poetry.source]]
 name = "pytorch"
