Moved huggingface cache dir around

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
     volumes:
       - ./backend:/app/backend
       - /app/backend/__pycache__
-      - ./backend/.huggingface:/app/backend/.huggingface
+      - ./.huggingface:/app/.huggingface
 
   frontend:
     build:
