--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ scikit-learn = "^1.5.0"
 joblib = "^1.4.2"
 matplotlib = "^3.9.0"
 pydantic-settings = "^2.4.0"
+lxml = "^5.3.0"
 
 [tool.pylsp-mypy]
 enabled = true
