--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,11 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 2s
+      timeout: 1s
+      retries: 5
 
   backend:
     build:
@@ -24,7 +29,6 @@ services:
           memory: 4G
         reservations:
           memory: 3G
-
     networks:
       - db_network
       - app_network
@@ -32,7 +36,8 @@ services:
     ports:
       - 8000:8000
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - RIJKSMUSEUM_API_KEY=${RIJKSMUSEUM_API_KEY}
