--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,7 @@ pillow = "^10.3.0"
 transformers = "^4.41.2"
 loguru = "^0.7.2"
 pytest = "^8.2.2"
-scikit-learn = "^1.5.0"
+scikit-learn = "1.5.1"
 joblib = "^1.4.2"
 matplotlib = "^3.9.0"
 pydantic-settings = "^2.4.0"
