--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,10 @@
     "pixi-viewport": "^5.0.3",
     "pixi.js": "^8.1.6",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
-  },
-  "devDependencies": {
+    "vue-router": "^4.3.2",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0"
+  },
+  "devDependencies": {
   }
 }
