--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,7 +36,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: ./frontend/prod.Dockerfile
+      dockerfile: ./frontend/npm.Dockerfile
       args:
         - NUXT_PUBLIC_API_BASE=${NUXT_PUBLIC_API_BASE}
     networks:
