--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,9 +17,6 @@ services:
     build:
       context: .
       dockerfile: ./backend/prod.Dockerfile
-      args:
-      - DATABASE_URL=${DATABASE_URL}
-      - RIJKSMUSEUM_API_KEY=${RIJKSMUSEUM_API_KEY}
     networks:
       - db_network
       - app_network
@@ -31,6 +28,11 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - RIJKSMUSEUM_API_KEY=${RIJKSMUSEUM_API_KEY}
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   frontend:
     build:
