--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,10 +34,16 @@ services:
       retries: 3
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.sem-art-backend-router.rule=Host(`semantic-art-api.lockhorst.dev`)"
-      - "traefik.http.routers.sem-art-backend-router.entrypoints=websecure"
-      - "traefik.http.routers.sem-art-backend-router.tls.certResolver=letsencrypt"
-      - "traefik.http.services.sem-art-backend-service.loadbalancer.server.port=8000"
+
+      - "traefik.http.routers.sem-art-backend-router-websecure.rule=Host(`semantic-art-api.lockhorst.dev`)"
+      - "traefik.http.routers.sem-art-backend-router-websecure.entrypoints=websecure"
+      - "traefik.http.routers.sem-art-backend-router-websecure.tls.certResolver=letsencrypt"
+      - "traefik.http.services.sem-art-backend-service-websecure.loadbalancer.server.port=8000"
+
+      - "traefik.http.routers.sem-art-backend-router-web.rule=Host(`semantic-art-api.lockhorst.dev`)"
+      - "traefik.http.routers.sem-art-backend-router-web.entrypoints=web"
+      - "traefik.http.services.sem-art-backend-service-web.middleware=redirect-to-https@file"
+      - "traefik.http.services.sem-art-backend-service-web.loadbalancer.server.port=8000"
 
   frontend:
     build:
@@ -55,10 +61,16 @@ services:
       - ./frontend-nginx.conf:/etc/nginx/nginx.conf
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.sem-art-frontend-router.rule=Host(`art.lockhorst.dev`)"
-      - "traefik.http.routers.sem-art-frontend-router.entrypoints=websecure"
-      - "traefik.http.routers.sem-art-frontend-router.tls.certResolver=letsencrypt"
-      - "traefik.http.services.sem-art-frontend-service.loadbalancer.server.port=4000"
+
+      - "traefik.http.routers.sem-art-frontend-router-websecure.rule=Host(`art.lockhorst.dev`)"
+      - "traefik.http.routers.sem-art-frontend-router-websecure.centrypoints=websecure"
+      - "traefik.http.routers.sem-art-frontend-router-websecure.tls.certResolver=letsencrypt"
+      - "traefik.http.services.sem-art-frontend-service-websecure.loadbalancer.server.port=4000"
+
+      - "traefik.http.routers.sem-art-frontend-router-web.rule=Host(`art.lockhorst.dev`)"
+      - "traefik.http.routers.sem-art-frontend-router-web.entrypoints=websecure"
+      - "traefik.http.services.sem-art-frontend-service-web.middleware=redirect-to-https@file"
+      - "traefik.http.services.sem-art-frontend-service-web.loadbalancer.server.port=4000"
 
 networks:
   dokploy-network:
