--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,11 +33,17 @@ services:
       timeout: 3s
       retries: 3
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.sem-art-backend-router.rule=Host(`sem-art-backend.lockhorst.dev`)"
-      - "traefik.http.routers.sem-art-backend-router.entrypoints=websecure"
-      - "traefik.http.routers.sem-art-backend-router.tls.certResolver=letsencrypt"
-      - "traefik.http.services.sem-art-backend-service.loadbalancer.server.port=8000"
+      - traefik.enable=true
+      - traefik.http.routers.semantic-art-search-backend-web.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-backend-web.entrypoints=web
+      - traefik.http.services.semantic-art-search-backend-web.loadbalancer.server.port=8000
+      - traefik.http.routers.semantic-art-search-backend-web.service=semantic-art-search-backend-web
+      - traefik.http.routers.semantic-art-search-backend-web.middlewares=redirect-to-https@file
+      - traefik.http.routers.semantic-art-search-backend-websecure.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-backend-websecure.entrypoints=websecure
+      - traefik.http.services.semantic-art-search-backend-websecure.loadbalancer.server.port=8000
+      - traefik.http.routers.semantic-art-search-backend-websecure.service=semantic-art-search-backend-websecure
+      - traefik.http.routers.semantic-art-search-backend-websecure.tls.certresolver=letsencrypt
 
   frontend:
     build:
@@ -54,11 +60,17 @@ services:
     volumes:
       - ./frontend-nginx.conf:/etc/nginx/nginx.conf
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.sem-art-frontend-router.rule=Host(`art.lockhorst.dev`)"
-      - "traefik.http.routers.sem-art-frontend-router.entrypoints=websecure"
-      - "traefik.http.routers.sem-art-frontend-router.tls.certResolver=letsencrypt"
-      - "traefik.http.services.sem-art-frontend-service.loadbalancer.server.port=4000"
+      - traefik.enable=true
+      - traefik.http.routers.semantic-art-search-frontend-web.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-frontend-web.entrypoints=web
+      - traefik.http.services.semantic-art-search-frontend-web.loadbalancer.server.port=8000
+      - traefik.http.routers.semantic-art-search-frontend-web.service=semantic-art-search-frontend-web
+      - traefik.http.routers.semantic-art-search-frontend-web.middlewares=redirect-to-https@file
+      - traefik.http.routers.semantic-art-search-frontend-websecure.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-frontend-websecure.entrypoints=websecure
+      - traefik.http.services.semantic-art-search-frontend-websecure.loadbalancer.server.port=8000
+      - traefik.http.routers.semantic-art-search-frontend-websecure.service=semantic-art-search-frontend-websecure
+      - traefik.http.routers.semantic-art-search-frontend-websecure.tls.certresolver=letsencryptend-service.loadbalancer.server.port=4000"
 
 networks:
   dokploy-network:
