--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,12 +34,12 @@ services:
       retries: 3
     labels:
       - traefik.enable=true
-      - traefik.http.routers.semantic-art-search-backend-web.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-backend-web.rule=Host(`semantic-art-api.lockhorst.dev`)
       - traefik.http.routers.semantic-art-search-backend-web.entrypoints=web
       - traefik.http.services.semantic-art-search-backend-web.loadbalancer.server.port=8000
       - traefik.http.routers.semantic-art-search-backend-web.service=semantic-art-search-backend-web
       - traefik.http.routers.semantic-art-search-backend-web.middlewares=redirect-to-https@file
-      - traefik.http.routers.semantic-art-search-backend-websecure.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-backend-websecure.rule=Host(`semantic-art-api.lockhorst.dev`)
       - traefik.http.routers.semantic-art-search-backend-websecure.entrypoints=websecure
       - traefik.http.services.semantic-art-search-backend-websecure.loadbalancer.server.port=8000
       - traefik.http.routers.semantic-art-search-backend-websecure.service=semantic-art-search-backend-websecure
@@ -61,12 +61,12 @@ services:
       - ./frontend-nginx.conf:/etc/nginx/nginx.conf
     labels:
       - traefik.enable=true
-      - traefik.http.routers.semantic-art-search-frontend-web.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-frontend-web.rule=Host(`art.lockhorst.dev`)
       - traefik.http.routers.semantic-art-search-frontend-web.entrypoints=web
       - traefik.http.services.semantic-art-search-frontend-web.loadbalancer.server.port=8000
       - traefik.http.routers.semantic-art-search-frontend-web.service=semantic-art-search-frontend-web
       - traefik.http.routers.semantic-art-search-frontend-web.middlewares=redirect-to-https@file
-      - traefik.http.routers.semantic-art-search-frontend-websecure.rule=Host(`semantic-art-postgres.lockhorst.dev`)
+      - traefik.http.routers.semantic-art-search-frontend-websecure.rule=Host(`art.lockhorst.dev`)
       - traefik.http.routers.semantic-art-search-frontend-websecure.entrypoints=websecure
       - traefik.http.services.semantic-art-search-frontend-websecure.loadbalancer.server.port=8000
       - traefik.http.routers.semantic-art-search-frontend-websecure.service=semantic-art-search-frontend-websecure
