--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,7 @@ services:
       - 8000
     deploy:
       replicas: 2   
+      endpont_mode: dnsrr
       update_config:
         parallelism: 1
         delay: 20s   
