--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: ./backend/prod.Dockerfile
+      dockerfile: ./prod.Dockerfile
     restart: always
     ports:
       - 8000
