--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,7 +20,7 @@ scikit-learn = "1.5.1"
 joblib = "^1.4.2"
 matplotlib = "^3.9.0"
 pydantic-settings = "^2.4.0"
-torch = {version = "^2.4.1+cpu", source = "pytorch", optional = true}
+torch = { version = "^2.4.1+cpu", source = "pytorch", optional = true }
 lxml = "^5.3.0"
 
 [tool.poetry.extras]
@@ -31,7 +31,7 @@ optional = true
 
 [tool.poetry.group.backend.dependencies]
 fastapi = "^0.111.0"
-uvicorn = {extras = ["standard"], version = "^0.30.0"}
+uvicorn = { extras = ["standard"], version = "^0.30.0" }
 
 [tool.poetry.group.etl]
 optional = true
@@ -43,6 +43,11 @@ runpod = "^1.7.0"
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cpu"
 priority = "supplemental"
+
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
 
 [tool.pylsp-mypy]
 enabled = true
@@ -57,38 +62,38 @@ build-backend = "poetry.core.masonry.api"
 line-length = 120
 target-version = "py312"
 select = [
-    "ALL", # include all the rules, including new ones
+  "ALL", # include all the rules, including new ones
 ]
 ignore = [
-    #### modules
-    "ANN", # flake8-annotations
-    "COM", # flake8-commas
-    "C90", # mccabe complexity
-    "DJ",  # django
-    "EXE", # flake8-executable
-    "T10", # debugger
-    "TID", # flake8-tidy-imports
+  #### modules
+  "ANN", # flake8-annotations
+  "COM", # flake8-commas
+  "C90", # mccabe complexity
+  "DJ",  # django
+  "EXE", # flake8-executable
+  "T10", # debugger
+  "TID", # flake8-tidy-imports
 
-    #### specific rules
-    "D100",   # ignore missing docs
-    "D101",
-    "D102",
-    "D103",
-    "D104",
-    "D105",
-    "D106",
-    "D107",
-    "D200",
-    "D205",
-    "D212",
-    "D400",
-    "D401",
-    "D415",
-    "E402",   # false positives for local imports
-    "E501",   # line too long
-    "TRY003", # external messages in exceptions are too verbose
-    "TD002",
-    "TD003",
-    "FIX002", # too verbose descriptions of todos
-    "B008" # Not appliciable for fastapi app due to the Depends method
+  #### specific rules
+  "D100",   # ignore missing docs
+  "D101",
+  "D102",
+  "D103",
+  "D104",
+  "D105",
+  "D106",
+  "D107",
+  "D200",
+  "D205",
+  "D212",
+  "D400",
+  "D401",
+  "D415",
+  "E402",   # false positives for local imports
+  "E501",   # line too long
+  "TRY003", # external messages in exceptions are too verbose
+  "TD002",
+  "TD003",
+  "FIX002", # too verbose descriptions of todos
+  "B008",   # Not appliciable for fastapi app due to the Depends method
 ]
