--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,8 +11,14 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - semantic-art-search-sem-art-db-646c50-data:/var/lib/postgresql/data
 
 
 networks:
   dokploy-network:
     external: true
+
+volumes:
+  - semantic-art-search-sem-art-db-646c50-data
+
