--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,13 @@
   "dependencies": {
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.0",
     "nuxt": "^3.11.2",
     "pixi-viewport": "^5.0.3",
     "pixi.js": "^8.1.6",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
-    "@vueuse/core": "^10.11.0",
-    "@vueuse/nuxt": "^10.11.0"
-  },
-  "devDependencies": {
+    "vue3-toastify": "^0.2.4"
   }
 }
