--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ../postgres-data/:/var/lib/postgresql/data
+      - ../files/postgresql.conf:/etc/postgresql/postgresql.conf:ro
 
 networks:
   dokploy-network:
